[gd_scene load_steps=2 format=3 uid="uid://cutscene_player_scene"]

[ext_resource type="Script" path="res://src/ui/cutscene_player.gd" id="1_cutscene"]

[node name="CutscenePlayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cutscene")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -250.0
grow_horizontal = 2
grow_vertical = 0

[node name="SpeakerLabel" type="Label" parent="TextContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 50.0
offset_top = 20.0
offset_right = -50.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 18
text = "Speaker"

[node name="TextLabel" type="Label" parent="TextContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 50.0
offset_top = 60.0
offset_right = -50.0
offset_bottom = 200.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 16
text = "Cutscene text appears here..."
autowrap_mode = 3
